WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
268326
Web process does not need to track cookie accept policy
https://bugs.webkit.org/show_bug.cgi?id=268326
Summary
Web process does not need to track cookie accept policy
Sihui Liu
Reported
2024-01-29 13:38:06 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-29 13:39:50 PST
<
rdar://problem/121879052
>
Sihui Liu
Comment 2
2024-01-29 13:53:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23458
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug