Web process does not need to track cookie accept policy https://bugs.webkit.org/show_bug.cgi?id=268326 rdar://121879052

Reviewed by NOBODY (OOPS!).

Web process used to keep track of cookie accept policy to decide the result of navigator.cookiesEnabled. After
273522@main, web process starts to get the value from network process, so it is unnecessary to cache the cookie accept
policy value in web process. This will help reduce IPC messages between network process and web process.

* Source/WebCore/platform/network/NetworkStorageSession.h:
* Source/WebKit/NetworkProcess/Cookies/WebCookieManager.cpp:
(WebKit::WebCookieManager::setHTTPCookieAcceptPolicy):
* Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::cookieAcceptPolicyChanged): Deleted.
* Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.h:
* Source/WebKit/NetworkProcess/NetworkProcess.cpp:
(WebKit::NetworkProcess::createNetworkConnectionToWebProcess):
(WebKit::NetworkProcess::cookieAcceptPolicyChanged): Deleted.
* Source/WebKit/NetworkProcess/NetworkProcess.h:
* Source/WebKit/NetworkProcess/NetworkProcess.messages.in:
* Source/WebKit/UIProcess/Network/NetworkProcessProxy.cpp:
(WebKit::NetworkProcessProxy::getNetworkProcessConnection):
* Source/WebKit/WebProcess/Network/NetworkProcessConnection.cpp:
(WebKit::NetworkProcessConnection::NetworkProcessConnection):
(WebKit::NetworkProcessConnection::cookiesEnabled const): Deleted.
(WebKit::NetworkProcessConnection::cookieAcceptPolicyChanged): Deleted.
* Source/WebKit/WebProcess/Network/NetworkProcessConnection.h:
(WebKit::NetworkProcessConnection::create):
(WebKit::NetworkProcessConnection::cookieAcceptPolicy const): Deleted.
* Source/WebKit/WebProcess/Network/NetworkProcessConnection.messages.in:
* Source/WebKit/WebProcess/Network/NetworkProcessConnectionInfo.h:
* Source/WebKit/WebProcess/Network/NetworkProcessConnectionInfo.serialization.in:
* Source/WebKit/WebProcess/WebPage/Cocoa/WebCookieCacheCocoa.mm:
(WebKit::WebCookieCache::inMemoryStorageSession): The NetworkStorageSession in WebCookieCache used cached cookie accept
policy value, but it does not need to. It could just use the AlwaysAccept policy because the cookies set in the cache
already pass the cookie blocking check in WebCookieJar (i.e. if a cookie should be blocked, then it won't be passed to
the cache, see WebCookieJar::setCookies), and the cache does not actually store cookies persistently (the session is
in-memory only).
* Source/WebKit/WebProcess/WebProcess.cpp:
(WebKit::WebProcess::ensureNetworkProcessConnection):